--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "clean:tsc": "rm tsconfig.tsbuildinfo",
     "test": "jest"
   },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "@swc/core": "^1.2.208",
     "@swc/jest": "^0.2.21",
     "@types/jest": "^28.1.4",
+    "@types/lodash": "^4.14.182",
     "@types/node": "14.14.31",
     "jest": "^28.1.2",
     "ts-node": "^10.8.2",
