--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@swc/core": "^1.2.208",
@@ -17,6 +18,7 @@
     "@types/jest": "^28.1.4",
     "@types/lodash": "^4.14.182",
     "@types/node": "14.14.31",
+    "@types/uuid": "^8.3.4",
     "jest": "^28.1.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
